--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 
 body {
+    font-family: 'Times New Roman', Times, serif;
     background-color: rgb(74, 65, 42);
     color: rgb(232, 244, 204);    
 }
@@ -39,9 +40,6 @@ body {
     width: 95%;
 }
 
-#taskbox {
-    
-}
 
 #btn {
     width: fit-content;
@@ -56,4 +54,10 @@ body {
     width: 95%;
     display: flex;
     flex-direction: column;
+}
+
+#loggut_btn {
+
+    display: flex;
+    align-self:flex-end;
 }
