--- a/public/style.css
+++ b/public/style.css
@@ -36,8 +36,17 @@ body {
 }
 
 #chatbox {
-    align-self: center;
-    width: 95%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    word-wrap: break-word;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#chatinput {
+    display: flex;
+    align-items: start;
 }
 
 
@@ -51,10 +60,23 @@ body {
 }
 
 #login_div {
-    width: 95%;
+    width: 50%;
     display: flex;
     flex-direction: column;
 }
+
+#login_text {
+    align-self: center;
+}
+
+#buttons_div {
+    display: flex;
+
+}
+.login_buttons {
+    width: 50%;
+}
+
 
 #loggut_btn {
 
